--- a/css/styles.css
+++ b/css/styles.css
@@ -614,6 +614,7 @@ svg {
 
 
 
+
 @media only screen and (max-width: 320px) {
 
 
@@ -1144,7 +1145,18 @@ approach-item-six .image p {
 
 }
 
-@media all and (min-width: 321px) and (max-width: 375px) {
+
+@media all and (max-width: 320px) {
+  
+  .portrait img {
+    height: 8rem;
+    padding: 0.25rem;
+  }
+
+}
+
+
+@media all and (min-width: 321px) and (max-width: 357px) {
 
   body {
     width: 25rem;
@@ -1190,8 +1202,8 @@ approach-item-six .image p {
   }
 
   .portrait img {
-    height: 13rem;
-    width: 11rem;
+    height: 11rem;
+    width: 9rem;
     margin-right: 4rem;
   }
 
@@ -1712,18 +1724,273 @@ main {
   margin-top: 2rem;
 }
 
+  }
+
+
+  @media all and (min-width: 358px) and (max-width: 361px) {
+
+
+    .profile {
+      width: 360px;
+    }
+  
+   .profile_about {
+    margin-left: 0rem;
+   } 
+
+   .page-header__item {
+    height: 2rem;
+    width: 6.5rem;
+    margin: 1rem;
+}
+
+  .navigation-list li {
+    font-size: 0.85rem;
+    margin-left: 0.5rem;
+  }
+
+  .main-navigation {
+    width: 50rem;
+  }
+
+  .portrait img {
+    height: 12rem;
+  }
+
+  .profile__portrait {
+    margin-left: 6.5rem;
+  }
+
+  .profile__welcome h1, .main-contact h1, .case-study h1 {
+    font-size: 1.5rem;
+    margin-top: 2rem;
+  }
+
+  .case-study-sections {
+    margin: 0rem;
+  }
+
+ 
+
+  .overview, .purpose, .objectives, .tools, .approach-intro, .approach-item-six, .approach-items-nine-eleven,  
+  .approach-items-twelve-thirteen, .wrap-up, .duration, .conclusion {
+    margin: 2rem;
+  }
+
+  .approach-item-one, .approach-item-two, .approach-items-three-five, .approach-item-six, .approach-items-nine-eleven,
+  .approach-items-twelve-thirteen {
+    margin: 2rem 2rem 0rem 2rem;
+  }
+
+  .approach-img-one, .approach-img-two, .approach-imgs-three-five, .approach-imgs-seven-eight, .approach-imgs-nine-eleven, 
+  .approach-imgs-twelve-thirteen {
+    margin: 0rem 2rem;
+  }
+
+  .overview h2, .purpose h2, .objectives h2, .tools h2, .approach-intro h2, .duration h2, .conclusion h2 {
+    font-size: 1.25rem;
+  }
 
 
 
+  .case-study h1 {
+    margin: 5rem;
+  }
 
+  .main-contact h1 {
+    margin-top: 4rem;
+  }  
+
+  .profile__welcome h3 {
+    font-size: 1.0rem;
+    margin: 2rem;
+  }
+
+  .profile_about {
+    margin-right: 0rem;
+  }
+
+  .profile_about h2 {
+    font-size: 1.25rem;
+    margin: 2rem 2rem 1rem 2rem;
+  }
+
+  .main-about {
+    margin-top: 5rem;
+    width: 360px;
+  }
+
+  .profile_about p {
+    margin: 2rem;
+  }
+
+  .profile_about p {
+    margin: 0rem 2rem 2rem 2rem;
+}
+
+  .skills {
+    width: 0.5rem;
+  }
+
+  .profile_about ul li {
+    width: 18rem;
+    margin: 0rem 2rem 0rem 0rem;
+}
+
+  .resume {
+    margin-left: 0rem;
+  }
+
+  .contact__grid {
+    margin: 1.25rem;
+  }
+
+  .contact__item {
+    padding-left: 0rem;
+    width: 20rem;
+  }
+
+  .contact__item h2 {
+    margin-left: 0.5rem;
+  }
+
+  #contact__item-one, #contact__item-two, #contact__item-three, .approach-img-one p, .approach-img-two p, 
+  .approach-imgs-three-five .image p, .approach-item-six .image p, .approach-imgs-seven-eight .image p, .approach-imgs-nine-eleven p,
+  .approach-imgs-twelve-thirteen .image p {
+    font-size: 0.75rem;
+  }
+
+ 
+
+
+  #contact__item-three {
+    height: 14rem;
+    margin-top: 1rem;
+    width: 19.8rem;
+  }
+
+  #contact__item-three p {
+    margin-top: 2rem;
+    margin-left: 0.5rem;
+  }
+
+  .main-work .grid {
+    margin: 0rem;
+  }
+
+  #project-one .project {
+    height: 13rem;
+}
+
+.buttons .github__button {
+  width: 15.75rem;
+  margin-bottom: 0.5rem;
+}
+
+#project-two .project {
+  height: 12rem;
+}
+
+#project-three .buttons {
+  margin-top: 1.5rem;
+}
+
+#project-four .project {
+  height: 13rem;
+}
+
+#project-five p {
+  margin-bottom: 2.5rem;
+}
+
+#project-five #bulleted-list {
+  margin-bottom: 3.5rem;
+}
+
+.github__button_2 {
+  background-color: var(--tertiary-color);
+  color: var(--secondary-color);
+  width: 15.75rem;
+  margin-bottom: 0.5rem;
+}
+
+#project-five .project {
+  height: 16rem;
+}
+
+#project-five .buttons {
+  margin-top: 0.5rem;
+}
+
+#project-six p {
+  margin-top: 2rem;
+}
+
+#project-six #bulleted-list {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  margin-right: 3rem;
+}
+
+#project-six .project {
+  width: 18rem;
+  height: 13rem;
+}
+
+.grid__item .buttons .trello__board, .grid__item .buttons .case__study {
+    width: 15.75rem;
+    margin-bottom: 0.5rem;
+    padding: 1rem;
+}
+
+.main-work h1 {
+  margin-top: 0rem;
+}
+
+.navigation-list {
+  margin-top: 1.25rem;
+}
+
+#myfavfilmz_Angular, #api-vs-fetchcomp, #img-two, #img-three, #img-four, #img-five, #approach-img-six, #img-seven,
+#img-eight, #approach-img-nine, #approach-img-ten, #approach-img-eleven, .approach-imgs-twelve-thirteen {
+  margin: 0rem 2rem;
+}
+
+.approach-item-two p, .approach-items-three-five p, .approach-item-six p, .approach-items-nine-eleven p, 
+.approach-items-twelve-thirteen p  {
+  margin-top: 3rem;
+}
+
+.approach-imgs-three-five .image p, .approach-imgs-seven-eight .image p, .approach-imgs-nine-eleven p {
+  margin-bottom: 1rem;
+}
+
+.approach-item-six .image p {
+  margin-top: 0rem;
+}
+
+}
+
+
+@media all and (min-width: 351px) and (max-width: 375px) {
+
+  .portrait img {
+    height: 9rem;
+  }
   
   }
 
-  
+
+@media all and (min-width: 376px) and (max-width: 400px) {
+
+.portrait img {
+  height: 13rem;
+}
+
+}
 
 
-
-@media all and (min-width: 376px) and (max-width: 425px) {
+@media all and (min-width: 401px) and (max-width: 425px) {
 
   .page-header {
     max-width: 100%;
@@ -2245,6 +2512,7 @@ main {
 
   .portrait img {
     margin-left: 6.5rem;
+    height: 14rem;
   }
 
   .profile__welcome h3 {
@@ -2344,11 +2612,57 @@ main {
 
   .approach-items-seven-eight {
     margin-top: 4rem;
+  }  
+}
+
+
+@media all and (min-width: 326px) and (max-width: 356px) {
+  
+  .portrait img {
+    height: 10rem;
+    width: 8rem;
+    padding: 0.5rem;
+  }
+}
+
+
+@media all and (min-width: 357px) and (max-width: 361px) {
+  
+  .portrait img {
+    height: 9rem;
+    padding: 0.5rem;
+  }
+}
+
+
+@media all and (min-width: 362px) and (max-width: 400px) {
+  
+  .portrait img {
+    height: 12rem;
+    padding: 0.5rem;
+  }
+}
+
+
+@media all and (min-width: 401px) and (max-width: 425px) {
+  
+  .portrait img {
+    height: 10rem;
+    padding: 0.5rem;
   }
 
+}
+
+
+@media all and (min-width: 426px) and (max-width: 575px) {
   
+  .portrait img {
+    height: 14rem;
   }
-  
+
+}
+
+
 
 @media all and (min-width: 426px) and (max-width: 768px) {
 
@@ -2882,9 +3196,69 @@ svg {
 }
 
 
-
-
 }
+
+@media all and (width: 600px) and (orientation: portrait) { 
+
+
+ html {
+  height: 100%;
+ } 
+
+  .page-header__item {
+    height: 3rem;
+    width: 12rem;
+}
+
+  nav {
+    margin-left: 0rem;
+  }
+
+  .navigation-list {
+    margin-top: 1.5rem;
+    margin-left: 0rem;
+}
+
+#project-one .buttons {
+  margin-top: 6rem;
+  margin-bottom: 2rem;
+}
+
+#project-two .buttons {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+#project-four .buttons {
+  margin-top: 4rem;
+}
+
+#project-five .buttons {
+  margin-top: 11rem;
+  margin-bottom: 2rem;
+}
+
+#project-six .buttons {
+  margin-top: 2rem;
+}
+
+.overview .image img, .approach-img-one img, #img-two, #img-three, #img-four, #img-five, #approach-img-six, .approach-item-six,
+#img-seven, #img-eight, .approach-imgs-three-five .image, .approach-imgs-seven-eight, .approach-items-nine-eleven p,
+.approach-imgs-seven-eight, .approach-imgs-seven-eight, .approach-imgs-three-five  {
+  width: 30rem;
+}
+
+.approach-imgs-three-five {
+  margin-left: 0rem;
+  margin-bottom: 32rem;
+}
+
+
+
+  
+}      
+
+
 
 @media all and (min-width: 769px) and (max-width: 1024px) {
     body {
@@ -3721,6 +4095,26 @@ textarea {
 
 }
 
+
+@media all and (min-width: 1025px) and (max-width: 1100px) {
+
+  .portrait img {
+    height: 19rem;
+  }
+  
+  }
+
+
+  @media all and (min-width: 1101px) {
+    .portrait img {
+      height: 24rem;
+    }
+  }
+
+
+
+
+
 @media all and (min-width: 1025px) {
     body {
         font-size: 1em;
@@ -3859,10 +4253,6 @@ textarea {
 
   #img-two {
     height: 12rem;
-  }
-
-  nav {
-    max-width: 70%;
   }
 
   .contact__item h2 {
@@ -4265,9 +4655,7 @@ textarea {
   font-size: 1.1rem;
 }
 
-.portrait img {
-  height: 24rem;
-}
+
 
 #contact__item-one, #contact__item-three, #contact__item-two {
   width: 85%;
