--- a/css/style.production.css
+++ b/css/style.production.css
@@ -17955,7 +17955,7 @@ main {
 
 
 
-@media all and (min-width: 1806px) and (max-width: 1900px) {
+@media all and (min-width: 1806px) {
 
   .contact__grid {
     margin-left: 8.5rem;
