--- a/css/styles.css
+++ b/css/styles.css
@@ -16231,7 +16231,7 @@ margin-bottom: 1rem;
 
 
 
-  @media all and (min-width: 1806px) and (max-width: 1900px) {
+  @media all and (min-width: 1806px) {
 
     .contact__grid {
       margin-left: 8.5rem;
