--- a/css/style.production.css
+++ b/css/style.production.css
@@ -17862,13 +17862,15 @@ main {
 
 }
 
-@media all and (min-width: 1806px) and (max-width: 1935px) {
+
+
+@media all and (min-width: 1806px) {
 
   .grid {
-    -ms-grid-columns: 1fr 2rem 1fr 2rem 1fr;
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 0rem;
-    -ms-grid-rows: 62rem 2rem 88rem;
+    -ms-grid-rows: 62rem 20px 88rem;
     grid-template-rows: 62rem 88rem;
     display: -ms-grid;
     display: grid;
@@ -17949,13 +17951,6 @@ main {
   .profile {
     margin-top: 4rem;
   }
-
-
-} 
-
-
-
-@media all and (min-width: 1806px) {
 
   .contact__grid {
     margin-left: 8.5rem;
